[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt_llm"
version = "0.0.4"
dependencies = ["typer", "langchain-core", "langchain-openai", "langchain-mistralai"]
authors = [
  { name="Hasan YILMAZ", email="yilmazhasan111@gmail.com" },
]
description = "A CLI tool to prompt LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/reego-software/prompt_llm"
Issues = "https://github.com/reego-software/prompt_llm/issues"

[project.scripts]
prompt_llm = "prompt_llm.cli:app"