[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt_llm"
dynamic = ["version"]
dependencies = ["typer", "langchain-core", "langchain-openai", "langchain-mistralai", "langchain-google-vertexai", "langchain-cohere", "langchain-nvidia-ai-endpoints", "langchain-fireworks", "langchain-groq"]

authors = [
  { name="Reego Software", email="reego.software@gmail.com" },
]
description = "A CLI tool to prompt LLMs by reego.software"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/reego-software/prompt_llm"
Issues = "https://github.com/reego-software/prompt_llm/issues"

[project.scripts]
prompt_llm = "prompt_llm.cli:app"

[tool.hatch.version]
path = "src/prompt_llm/__init__.py"
